# sdlc-developer-agent

./: README.md  pyproject.toml  sdlc-developer-agent.pyproj  sdlc-developer-agent.sln
examples/: input.architecture_propose.allow.json  input.architecture_propose.deny_cross_project.json  input.project_read.deny_cross_project.json  input.project_read.json  input.repository_write.allow.json  input.repository_write.deny_protected_branch.json
sdlc_developer_agent/: __init__.py  agent.py  cli.py
tests/: test_agent.py  test_authorization.py  test_integration_opa.py  test_role_policy.py
