[project]
name = "sdlc-developer-agent"
version = "0.1.0"
description = "Operational agent implementing agent_role == \"developer\" from the agentic-sdlc-reference-architecture."
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sdlc_developer_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
